name:                buzzword
version:             1.0.0.0
synopsis:            Markov chain business-buzzword-generator
description:         Please see README.md
homepage:            https://github.com/githubuser/buzzword#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Hodapp
maintainer:          Hodapp87@gmail.com
copyright:           2013, Chris Hodapp
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable buzzword
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       random
